# rl-uav

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  index.html  package.xml  requirements.txt  sonar-project.properties  style.css  train_uav.py
.github/workflows/: build.yml
launch/: train.launch
requirements/: dev.txt  prod.txt
rl_uav/data_classes/: euler.py
rl_uav/enums/: action.py  track.py
rl_uav/envs/: env.py  navigation.py  navigation_env.py
rl_uav/features/: discretizer.py  feature_constructor.py  fourier_basis.py  linear_function_approximation.py  polynomials.py  radial_basis.py  radial_basis_functions.py  tile_coding.py
rl_uav/rl_algorithms/: lfa_q_lambda.py  lfa_q_learning.py  lfa_sarsa.py  lfa_sarsa_lambda.py  lspi.py  rl_algorithm.py  tabular_monte_carlo.py  tabular_q_lambda.py  tabular_q_learning.py  tabular_sarsa.py  tabular_sarsa_lambda.py
rl_uav/spaces/: box.py  discrete.py  space.py
scripts/: laserscan_to_pointcloud.py  train_uav.py
scripts/envs/: navigation_env.py
scripts/rl_algorithms/: lspi.py
scripts/spaces/: box.py
src/envs/: env.py  navigation_env.py
src/features/: feature_constructor.py  radial_basis_functions.py  rbf.py  tile_coding.py
src/rl_algorithms/: lfa_sarsa_lambda.py  lspi.py  rl_algorithm.py
src/spaces/: box.py  discrete.py  seeding.py  space.py
tests/: test_discretizer.py  test_fourier_basis.py  test_polynomials.py  test_radial_basis.py  test_tile_coding.py
worlds/: track1.world  track2.world  track3.world
