<?xml version="1.0"?>
<package format="2">
  <name>rl_uav</name>
  <version>0.1.0</version>
  <description>Implementation of different reinforcement learning algorithms to solve the navigation problem of an unmanned aerial vehicle (UAV)</description>
  <maintainer email="nickgeramanis@gmail.com">Nikolaos Geramanis</maintainer>
  <license>GPLv3</license>
  <url type="website">https://nickgeramanis.github.io/rl-uav/</url>
  <author email="nickgeramanis@gmail.com">Nikolaos Geramanis</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>gazebo-ros-pkgs</depend>
  <depend>hector_quadrotor</depend>
  <depend>hector_localization</depend>
  <depend>hector_gazebo</depend>
  <depend>hector_models</depend>
  <exec_depend>numpy</exec_depend>
  <export></export>
</package>